[tool.poetry]
name = "openrelik-worker-mount-debug"
version = "0.1.0"
description = "Debug Mount workflow for disk images"
authors = ["Ramses de Beer <ramsesdebeer@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
celery = { extras = ["redis"], version = "^5.4.0" }
openrelik-worker-common = "^0.16.0"
structlog = "^25.4.0"

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
