[project]
authors = [
    {name = "Ramses de Beer", email = "ramsesdebeer@gmail.com"},
]
requires-python = "<4.0,>=3.11"
dependencies = [
    "celery[redis]<6.0.0,>=5.4.0",
    "openrelik-worker-common (>=0.17.1,<0.18.0)",
    "pytest>=8.4.1",
]
name = "openrelik-worker-mount-debug"
version = "0.1.0"
description = "Debug Mount workflow for disk images"
readme = "README.md"

[dependency-groups]
test = [
    "pytest",
    "pytest-cov<6.0.0,>=5.0.0",
    "pytest-mock<4.0.0,>=3.14.0",
]

[tool.uv]
default-groups = []
